@@ -2,6 +2,9 @@ Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
 version <next>:
+- av_basename and av_dirname
+
+version 9_beta3:
 - ashowinfo audio filter
 - 24-bit FLAC encoding
 - audio volume filter
